--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </ul>
 <hr />
 <h2>My Cute Puppy</h2>
-<img src="../assets/images/Dog.jpg" alt="It is my puppy" height="300" width="400"/>
+<img src="./assets/images/Dog.jpg" alt="It is my puppy" height="300" width="400"/>
 <p>
 <a href="./public/about.html">ABOUT /</a>
 <a href="./public/contact.html">CONTACT </a>
